fix: CORS para Firebase, URL de BD con SSL y dialecto MySQL8